--- a/WebWithEFC6/Properties/launchSettings.json
+++ b/WebWithEFC6/Properties/launchSettings.json
@@ -1,21 +1,21 @@
-{
+﻿{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:22596",
-      "sslPort": 44333
+      "applicationUrl": "http://localhost:53309",
+      "sslPort": 44380
     }
   },
   "profiles": {
-    "SQLSC.Web": {
+    "WebWithEFC6": {
       "commandName": "Project",
+      "dotnetRunMessages": true,
       "launchBrowser": true,
+      "applicationUrl": "https://localhost:7243;http://localhost:5243",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "https://localhost:7100;http://localhost:5100",
-      "dotnetRunMessages": true
+      }
     },
     "IIS Express": {
       "commandName": "IISExpress",
