--- a/DBPack/DBPack.csproj
+++ b/DBPack/DBPack.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="MSBuild.Sdk.SqlProj/1.15.0">
+<Project Sdk="MSBuild.Sdk.SqlProj/1.17.3">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-	  <SqlServerVersion>SqlAzure</SqlServerVersion>
-	
+        <SqlServerVersion>Sql150</SqlServerVersion>
+	<BundledNETCoreAppTargetFrameworkVersion>5.0</BundledNETCoreAppTargetFrameworkVersion>
   </PropertyGroup>
 	<ItemGroup>
 		<Content Include="..\DatabaseProject\dbo\**\*.sql" />
