--- a/.github/workflows/main_dbprojweb-sql-sc-ne.yml
+++ b/.github/workflows/main_dbprojweb-sql-sc-ne.yml
@@ -73,6 +73,7 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
       - name: "Run DacPac"
         uses: azure/sql-action@v1
-        with:        
+        with: 
+          server-name: sql-sc-ne.database.windows.net
           connection-string: ${{ secrets.DACPAC_DB_CON }}
           dacpac-package: '.DBPack/Database.dacpac'
