--- a/.github/workflows/main_dbprojweb-sql-sc-ne.yml
+++ b/.github/workflows/main_dbprojweb-sql-sc-ne.yml
@@ -74,4 +74,4 @@ jobs:
         with: 
           server-name: sql-sc-ne.database.windows.net
           connection-string: ${{ secrets.DACPAC_DB_CON }}
-          dacpac-package: '${PWD}/DBPack/Database.dacpac'
+          dacpac-package: 'DBPack/Database.dacpac'
