--- a/.github/workflows/main_dbprojweb-sql-sc-ne.yml
+++ b/.github/workflows/main_dbprojweb-sql-sc-ne.yml
@@ -47,7 +47,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: DacPac
-          path: $GITHUB_WORKSPACE/DBPack/bin/Release/netstandard/DBPack.dacpac
+          path: ${{github.workspace}}/DBPack/bin/Release/netstandard/DBPack.dacpac
 
   deploy:
     runs-on: ubuntu-latest
