--- a/.github/workflows/main_dbprojweb-sql-sc-ne.yml
+++ b/.github/workflows/main_dbprojweb-sql-sc-ne.yml
@@ -50,7 +50,7 @@ jobs:
           path: ${{github.workspace}}/DBPack/bin/Release/netstandard2.0/DBPack.dacpac
 
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     needs: build
     environment:
       name: 'Production'
