Update Readme. Actions path filters to only build on relevant changes.

--- a/.github/workflows/main_dbprojweb-sql-sc-ne.yml
+++ b/.github/workflows/main_dbprojweb-sql-sc-ne.yml
@@ -6,7 +6,16 @@ name: Build and deploy ASP.Net Core app to Azure Web App - dbprojweb-sql-sc-ne
 on:
   push:
     branches:
-      - main
+    - 'main'
+    paths:
+      - 'DBPack/**'
+      - 'DatabaseProject/**'
+      - 'WebWithDBProject/**'
+  pull_request:
+    paths:
+      - 'DBPack/**'
+      - 'DatabaseProject/**'
+      - 'WebWithDBProject/**'
   workflow_dispatch:
 
 jobs:
