Changed Local Flyway DB server

--- a/flyway.conf
+++ b/flyway.conf
@@ -1,3 +1,1 @@
-flyway.url=jdbc:sqlserver://localhost:1433;databaseName=SQLSCData
-flyway.user=sa
-flyway.password=yourStrong(!)Password
+flyway.url=jdbc:sqlserver://localhost:1433;databaseName=FlywayData;integratedSecurity=true
