--- a/SQLSC.Web/SQLSC.Web.csproj
+++ b/SQLSC.Web/SQLSC.Web.csproj
@@ -7,6 +7,13 @@
     <UserSecretsId>044b8909-d0e6-4219-b841-01db46d464f6</UserSecretsId>
   </PropertyGroup>
 
+	<ItemGroup>
+		<None Include="..\sql\**\*.sql">
+			<Link>sql\%(RecursiveDir)/%(FileName)%(Extension)</Link>
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
   </ItemGroup>
