Updated EF Context and used it in Website.

--- a/WebWithEFC6/appsettings.json
+++ b/WebWithEFC6/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SQLSC_EFCContext": "Server=(localdb)\\mssqllocaldb;Database=SQLSC_EFC;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
