--- a/.github/workflows/main_efweb-sql-sc-ne.yml
+++ b/.github/workflows/main_efweb-sql-sc-ne.yml
@@ -36,7 +36,7 @@ jobs:
       - name: dotnet restore tools
         run: |
             cd WebWithEFC6 
-            dotnet tool-manifest restore
+            dotnet tool restore
             dotnet ef migrations bundle --self-contained --force -r linux-x64
 
       - name: Upload artifact for deployment job
