Test run EF build and deploy 4

--- a/.github/workflows/main_efweb-sql-sc-ne.yml
+++ b/.github/workflows/main_efweb-sql-sc-ne.yml
@@ -69,7 +69,7 @@ jobs:
           name: efmigration
 
       - name: "Run efmigrations"
-        run: efbundle --help
+        run: ${PWD}/efbundle --help
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
