Test run EF build and deploy 11

--- a/.github/workflows/main_efweb-sql-sc-ne.yml
+++ b/.github/workflows/main_efweb-sql-sc-ne.yml
@@ -70,11 +70,7 @@ jobs:
 
       - name: "Run efmigrations"
         run: |
-            echo "GITHUB_WORKSPACE = $GITHUB_WORKSPACE"
-            echo "github.workspace = ${{ github.workspace }}"
-            echo "pr.ref = ${{github.event.pull_request.head.ref}}"
-            echo "github.ref = ${{ github.ref }}"
-            echo "$GITHUB_CONTEXT"
+            chmod +x ${{ github.workspace }}/efbundle
             ${{ github.workspace }}/efbundle --help
 
       - name: Deploy to Azure Web App
