--- a/.github/workflows/flyway-migration-test.yaml
+++ b/.github/workflows/flyway-migration-test.yaml
@@ -30,7 +30,7 @@ jobs:
         uses: red-gate/flyway-hub-migration-test@v4
         with:
           projectName: holthe-tveit-sql-sc
-          engine: SQL Server (v2019)
+          engine: sqlserver-19
           migrationDirs: sql  
 env:
   FLYWAYHUB_ACCESS_TOKEN: ${{ secrets.FLYWAY_HUB_ACCESS_TOKEN }}
