--- a/.github/workflows/main_sql-sc-ne-web.yml
+++ b/.github/workflows/main_sql-sc-ne-web.yml
@@ -60,9 +60,10 @@ jobs:
 
       - name: Run tSQLt tests through powershell       
         uses: actions/checkout@v2
-      - run: |
-            ${{ github.workspace }}/sql/runTSQTests.ps1 -ConnectionString "${{secrets.FLYWAY_DB_CONNECTION}}"
         shell: pwsh
+        run: |
+            &${{ github.workspace }}/sql/runTSQTests.ps1 -ConnectionString "${{secrets.FLYWAY_DB_CONNECTION}}"
+        
 
       - name: Upload tsql artifact
         uses: actions/upload-artifact@v2
