--- a/.github/workflows/main_sql-sc-ne-web.yml
+++ b/.github/workflows/main_sql-sc-ne-web.yml
@@ -60,7 +60,7 @@ jobs:
 
       - name: Run tSQLt tests through powershell       
         shell: pwsh
-        run: Invoke-Command -FilePath "${{ github.workspace }}/sql/runTSQTests.ps1" -ConnectionString "${{secrets.FLYWAY_DB_CONNECTION}}" 
+        run: '& "${{ github.workspace }}/sql/runTSQTests.ps1" -ConnectionString "${{secrets.FLYWAY_DB_CONNECTION}}" '
         
 
       - name: Upload tsql artifact
