--- a/.github/workflows/main_sql-sc-ne-web.yml
+++ b/.github/workflows/main_sql-sc-ne-web.yml
@@ -10,6 +10,7 @@ on:
     paths:
       - 'sql/**'
       - 'SQLSC.Web/**'
+      - '.github\workflows\main_sql-sc-ne-web.yml'
   pull_request:
     paths:
     - 'sql/**'
@@ -61,7 +62,7 @@ jobs:
       - name: Run tSQLt tests through powershell       
         shell: pwsh
         run: |
-           ${{ github.workspace }}/sql/runTSQTests.ps1 -ConnectionString "${{secrets.FLYWAY_DB_CONNECTION}}" '
+           ${{ github.workspace }}/sql/runTSQTests.ps1 -ConnectionString "${{secrets.FLYWAY_DB_CONNECTION}}" 
         
 
       - name: Upload tsql artifact
