--- a/.github/workflows/main_sql-sc-ne-web.yml
+++ b/.github/workflows/main_sql-sc-ne-web.yml
@@ -59,12 +59,9 @@ jobs:
         uses: actions/checkout@v2 # Required to mount the Github Workspace to a volume 
       - run: docker run -v ${PWD}/sql:/flyway/sql --rm flyway/flyway -url="${{secrets.PROD_DB_CONNECTION}}" migrate
 
-      - name: Run tSQLt tests through powershell       
-        shell: pwsh
-        uses: actions/checkout@v2
-        run: |
+      -  run: |
            ./sql/runTSQTests.ps1 -ConnectionString "${{secrets.FLYWAY_DB_CONNECTION}}" 
-        
+         shell: pwsh 
 
       - name: Upload tsql artifact
         uses: actions/upload-artifact@v2
