--- a/.github/workflows/main_sql-sc-ne-web.yml
+++ b/.github/workflows/main_sql-sc-ne-web.yml
@@ -60,7 +60,7 @@ jobs:
       - run: docker run -v ${PWD}/sql:/flyway/sql --rm flyway/flyway -url="${{secrets.PROD_DB_CONNECTION}}" migrate
 
       -  run: |
-           './sql/runTSQTests.ps1 -ConnectionString "${{secrets.FLYWAY_DB_CONNECTION}}" '
+           "./sql/runTSQTests.ps1" -ConnectionString "${{secrets.FLYWAY_DB_CONNECTION}}" 
          shell: pwsh 
 
       - name: Upload tsql artifact
