--- a/.github/workflows/main_sql-sc-ne-web.yml
+++ b/.github/workflows/main_sql-sc-ne-web.yml
@@ -59,9 +59,11 @@ jobs:
         uses: actions/checkout@v2 # Required to mount the Github Workspace to a volume 
       - run: docker run -v ${PWD}/sql:/flyway/sql --rm flyway/flyway -url="${{secrets.PROD_DB_CONNECTION}}" migrate
 
-      -  run: pwsh -command "${{ github.workspace }}/sql/runTSQTests.ps1 -ConnectionString '${{secrets.FLYWAY_DB_CONNECTION}}'" 
-         
-
+      -  run: |
+                Install-Module -Name SqlServer -Scope CurrentUser -Confirm
+                Import-Module SqlServer
+                Invoke-Sqlcmd -Query "exec tSQLt.RunAll" -ConnectionString "${{secrets.FLYWAY_DB_CONNECTION}}" -OutputAs DataSet -verbose -AbortOnError *> tSqlTestResult.txt
+                
       - name: Upload tsql artifact
         uses: actions/upload-artifact@v2
         with:
